USER STORY THREE
Added skill search bar to 'index.html',
Added feature tests for search feature.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,21 @@
     <script src="js/app.js"></script>
   </head>
 
-  <body>
+  <body id="sosFixitBody">
+
     <div>
       <h1 id="welcome">Hello World</h1>
     </div>
+
+    <div class="skillsSearchBar">
+      <input type="text" id="userSkils" ng-model="skills" placeholder="Enter required skills...">
+      <button id="skillSearchSubmit" ng-click="getUsersSkills()">Search Skills</button>
+    </div>
+
+    <div
+
   </body>
+
+
 
 </html>
