new feature test

--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
     <script src="js/controllers/sosFixitSearchController.js"></script>
   </head>
 
-  <body id="sosFixitBody" ng-Controller = "searchController as SearchCtrl" ng-init = "getSkillsList()">
-    <button ng-click="SearchCtrl.getSkillsList()">Load skills</button>
-    <div>
-      <h1 id="welcome">Hello World</h1>
-    </div>
-
+  <body id="sosFixitBody" ng-Controller = "searchController as SearchCtrl" ng-init = "SearchCtrl.getSkillsList()">
     <div class="submitSkillstoSearch" >
         <section ng-repeat ='skill in SearchCtrl.skills'>
           <button ng-click = "SearchCtrl.saveSkills(skill)"> select {{skill.skill.name}} </button>
@@ -24,12 +19,11 @@
     </div>
 
     <div class="skillsSearchBar">
-      <!-- <input type="text" id="userSkils" ng-model="skills" placeholder="Enter required skills..."> -->
       <button id="skillSearchSubmit" ng-click="SearchCtrl.getUsersSkills()">Search Skills</button>
     </div>
 
-    <div ng-show="SearchCtrl.loaded" ng-repeat="user in SearchCtrl.users">
-      {{user.user.email}}
+    <div class = "list-users" ng-show="SearchCtrl.loaded" ng-repeat="user in SearchCtrl.users">
+      <p id ="user_email" {{user.user.email}} p>
     </div>
 
 
