Made small change to index, fixed user email

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class = "list-users" ng-show="SearchCtrl.loaded" ng-repeat="user in SearchCtrl.users">
-      <p id ="user_email" {{user.user.email}} p>
+      <p id ="user_email"> {{user.user.email}} <p>
     </div>
 
 
