--- a/index.html
+++ b/index.html
@@ -12,18 +12,22 @@
   </head>
 
   <body id="sosFixitBody" ng-Controller = "searchController as SearchCtrl" ng-init = "SearchCtrl.getSkillsList()">
-    <div class="submitSkillstoSearch" >
-        <section ng-repeat ='skill in SearchCtrl.skills'>
-          <button ng-click = "SearchCtrl.saveSkills(skill)"> select {{skill.skill.name}} </button>
-        </section>
+    <div id='skillSelectorButtons'>
+      <div class="submitSkillstoSearch" >
+          <section ng-repeat ='skill in SearchCtrl.skills'>
+            <button ng-click = "SearchCtrl.saveSkills(skill)"> select {{skill.skill.name}} </button>
+          </section>
+      </div>
     </div>
 
     <div class="skillsSearchBar">
       <button id="skillSearchSubmit" ng-click="SearchCtrl.getUsersSkills()">Search Skills</button>
     </div>
 
-    <div class = "list-users" ng-show="SearchCtrl.loaded" ng-repeat="user in SearchCtrl.users">
-      <p id ="user_email"> {{user.user.email}} <p>
+    <div id='listUsersWithSelectedSkills'>
+      <div id='' class = "list-users" ng-show="SearchCtrl.loaded" ng-repeat="user in SearchCtrl.users">
+        <p id ="user_email"> {{user.user.email}} <p>
+      </div>
     </div>
 
 
