Corrected bug with user sign out and routes

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
 
     <li ng-show="user.id">
-      <a ng-click="signOut()" ng-href="/">Sign out</a>
+      <a ng-click="signOut()">Sign out</a>
     </li>
 
     <div ng-view>
