--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       </div>
 
       <div class = "list-users" ng-show="SearchCtrl.loaded" ng-repeat="user in SearchCtrl.users">
-        <p id ="user_email"> {{user.user.email}} <p>
+        <p id ="user_email"> {{user}} <p>
       </div>
 
     </section>
