--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <script src="../../bower_components/angular-cookie/angular-cookie.min.js"></script>
     <script src="../../bower_components/angular-route/angular-route.js"></script>
     <script src="../../bower_components/ng-token-auth/dist/ng-token-auth.js"></script>
+    <script src="../../bower_components/angular-mocks/angular-mocks.js"></script>
 
     <script src="../js/app.js"></script>
 
@@ -29,6 +30,7 @@
     <div ng-view>
 
     </div>
+
 
     <section ng-show="user.id" ng-Controller = "searchController as SearchCtrl" ng-init = "SearchCtrl.getSkillsList()">
 
