--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <script src="../js/controllers/user_sessions.js"></script>
     <script src="./js/controllers/user_registrations.js"></script>
     <script src="./js/controllers/user_registrations.js"></script>
+    <script src="./js/factories/skillsResourceFactory.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -42,7 +43,7 @@
 
       <div class="submitSkillstoSearch" >
           <section ng-repeat ='skill in SearchCtrl.skills'>
-            <button ng-click = "SearchCtrl.saveSkills(skill)"> select {{skill.skill.name}} </button>
+            <button ng-click = "SearchCtrl.saveSkills(skill)"> select {{skill.name}} </button>
           </section>
       </div>
 
@@ -50,7 +51,7 @@
         <button id="skillSearchSubmit" ng-click="SearchCtrl.getUsersSkills()">Search Skills</button>
       </div>
 
-      <div class = "list-users" ng-show="SearchCtrl.loaded" ng-repeat="user in SearchCtrl.users">
+      <div class = "list-users" ng-show="SearchCtrl.loaded" ng-repeat="user in SearchCtrl.users track by $index">
         <p id ="user_email"> {{user}} <p>
       </div>
 
