--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,12 @@
     <script src="./js/controllers/user_registrations.js"></script>
     <script src="./js/controllers/user_registrations.js"></script>
     <script src="./js/factories/skillsResourceFactory.js"></script>
+    <script src="./js/factories/registrationLocationFactory.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <!-- <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&v=3&libraries=geometry"></script> -->
+
 
   </head>
 
