user distance factory

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
     <script src="./js/controllers/user_registrations.js"></script>
     <script src="./js/factories/skillsResourceFactory.js"></script>
     <script src="./js/factories/registrationLocationFactory.js"></script>
+    <script src="./js/factories/userDistanceCalculationFactory.js"></script>
+
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
