fixing after Zeshan's refactor

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <script src="./js/controllers/sosFixitListUsersController.js"></script>
     <script src="./js/factories/skillsResourceFactory.js"></script>
     <script src="./js/factories/registrationLocationFactory.js"></script>
+    <script src="./js/factories/userDistanceCalcFactory.js"></script>
     <script src="./js/services/skillsListService.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -44,7 +45,7 @@
 
     </div>
 
-    
+
   </body>
 
 
