--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,10 @@
     <script src="../js/controllers/user_sessions.js"></script>
     <script src="./js/controllers/user_registrations.js"></script>
     <script src="./js/controllers/sosFixitListUsersController.js"></script>
+    <script src="./js/controllers/sosFixitMailboxController.js"></script>
     <script src="./js/factories/skillsResourceFactory.js"></script>
+    <script src="./js/factories/mailboxFactory.js"></script>
+    <script src="./js/services/mailboxService.js"></script>
     <script src="./js/factories/registrationLocationFactory.js"></script>
     <script src="./js/services/skillsListService.js"></script>
 
@@ -44,7 +47,7 @@
 
     </div>
 
-    
+
   </body>
 
 
