--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <script src="./js/services/mailboxService.js"></script>
     <script src="./js/factories/registrationLocationFactory.js"></script>
     <script src="./js/services/skillsListService.js"></script>
-    <script src="../js/controllers/sendingMessagesController.js"></script>
+    <script src="./js/controllers/sendingMessagesController.js"></script>
     <script src="./js/services/sendingMessageService.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
