--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 
     <script src="../js/app.js"></script>
     <script src="../js/controllers/sosFixitSearchController.js"></script>
+    <script src="../js/controllers/replyingMessagesController.js"></script>
     <script src="../js/controllers/addSkillsController.js"></script>
     <script src="../js/controllers/user_sessions.js"></script>
     <script src="./js/controllers/user_registrations.js"></script>
@@ -32,6 +33,7 @@
     <script src="./js/services/skillsListService.js"></script>
     <script src="./js/controllers/sendingMessagesController.js"></script>
     <script src="./js/services/sendingMessageService.js"></script>
+    <script src="./js/services/replyingMessageService.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
