--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,7 @@
     <script src='bower_components/angular-simple-logger/dist/angular-simple-logger.min.js'></script>
     <script src='bower_components/angular-google-maps/dist/angular-google-maps.min.js'></script>
     <script src='bower_components/ngGeolocation/ngGeolocation.min.js'></script>
-
-
+    
     <script src="../js/app.js"></script>
     <script src="../js/controllers/sosFixitSearchController.js"></script>
     <script src="../js/controllers/replyingMessagesController.js"></script>
@@ -73,7 +72,7 @@
       </div>
     </header>
 
-    <div ng-view autoscroll>
+    <div ng-view autoscroll id="content">
 
     </div>
 
