Messages now functioning after merge

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
     <script src="./js/services/mailboxService.js"></script>
     <script src="./js/services/skillsListService.js"></script>
     <script src="./js/services/registrationLocationService.js"></script>
+    <script src="./js/services/savingUserService.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -63,6 +64,9 @@
 
     </div>
 
+    <!-- <div ng-show="">
+      {{ message }}
+    </div> -->
 
   </body>
 
