--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
           </div>
           <nav id="main-nav">
             <div id="user-info">
-              <p>Signed in as {{user.name}}</p>
+              <p ng-show="user.id">Signed in as {{user.name}}</p>
             </div>
             <div id="user-actions">
               <div class="user-link" id="signInLink" ng-hide="user.id">
