--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
     <script src="./js/controllers/sosFixitMailboxController.js"></script>
     <script src="./js/controllers/userProfileController.js"></script>
     <script src="./js/controllers/sendingMessagesController.js"></script>
+    <script src="./js/controllers/indexLinkToProfileController.js"></script>
+
 <!-- Factories: -->
     <script src="./js/factories/skillsResourceFactory.js"></script>
     <script src="./js/factories/mailboxFactory.js"></script>
@@ -42,6 +44,7 @@
     <script src="./js/services/registrationLocationService.js"></script>
     <script src="./js/services/savingUserService.js"></script>
 
+
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <!-- <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&v=3&libraries=geometry"></script> -->
@@ -55,6 +58,11 @@
     <p ng-show="user.id">
       <a ng-click="signOut()" ng-href="/#/">Sign out</a>
     </p>
+
+
+    <section ng-controller="indexLinkToProfileController as profileCtrl" ng-show="user.id">
+      <a ng-href='/#/user_profile'> <button ng-click="profileCtrl.saveCurrentUser()">  Your profile! </button></a>
+    </section>
 
     <div ng-view>
 
