fixing profile link in header

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,6 @@
   </head>
 
   <body id="sosFixitBody" ng-app ="SosFixit">
-<<<<<<< HEAD
     <header id="masthead">
       <div class="row">
         <div class="small-12 columns">
@@ -77,8 +76,8 @@
               <div class="user-link" id='registerLink' ng-hide="user.id">
                 <a class="mega-button" ng-href="/#/register">Register</a>
               </div>
-              <div class="user-link" id='profileLink' ng-show="user.id">
-                <a class="mega-button" ng-href='/#/user_profile'><button ng-click="profileCtrl.saveCurrentUser()"> Your profile!</button></a>
+              <div class="user-link" id='profileLink' ng-controller="indexLinkToProfileController as profileCtrl" ng-show="user.id">
+                <a class="mega-button" ng-href='/#/user_profile' ng-click="profileCtrl.saveCurrentUser()">Your profile!</a>
               </div>
             </div>
           </nav>
