--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>SOS Fixit</title>
+    <title>SOSFixIt.</title>
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
@@ -47,8 +47,8 @@
     <script src="https://use.typekit.net/tqk1faz.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
-    <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/foundation.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 
 
     <!-- <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&v=3&libraries=geometry"></script> -->
@@ -60,7 +60,7 @@
       <div class="row">
         <div class="small-12 columns">
           <div id="site-title">
-            <h2><a ng-href="/#/">CommunityFixer.</a></h2>
+            <h2><a ng-href="/#/">SOSFixit.</a></h2>
           </div>
           <nav id="main-nav">
             <div id="user-info">
